fix bug favorit button behind of footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -435,16 +435,15 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: #db0000;
-
   position: fixed;
   bottom: 16px;
   right: 16px;
   border-radius: 50%;
   border: 0;
-
   font-size: 18px;
   color: white;
   cursor: pointer;
+  z-index: 1;
 }
 
 .error {
